gcc/testsuite/rust/rustc/ui/impl-trait/precise-capturing/dyn-use_dg.rs
fn dyn() -> &'static dyn use<> { &() }
// { dg-error "" "" { target *-*-* } .-1 }

